Old/prometheus_elasticsearch_exporter.yml
# https://github.com/prometheus-community/elasticsearch_exporter

# prometheus.yml
# - job_name: elasticsearch-exporter
#   scrape_interval: 15s
#   static_configs:
#     - targets: ['mon3.rudenspavasaris.id.lv:443']
#   metrics_path: /metrics
#   scheme: https
# - job_name: elastic-to-prometheus
#   scrape_interval: 30s
#   static_configs:
#     - targets: ['rudenspavasaris.id.lv:8092']
#   metrics_path: /metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-elasticsearch-exporter
  namespace: elastic
spec:
  selector:
    matchLabels:
      name: prometheus-elasticsearch-exporter
  replicas: 1
  template:
    metadata:
      labels:
        name: prometheus-elasticsearch-exporter
    spec:
      containers:
      - name: prometheus-elasticsearch-exporter
        image: quay.io/prometheuscommunity/elasticsearch-exporter:latest
        args: ["--es.uri=https://elastic:changeme@elasticsearch:9200", "--es.ca=/etc/elasticsearch-ca.pem"]
        volumeMounts:
        - name: elasticsearch-ca
          mountPath: /etc/elasticsearch-ca.pem
          readOnly: true
          subPath: elasticsearch-ca.pem
      volumes:
      - name: elasticsearch-ca
        secret:
          secretName: elasticsearch-ca
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-elasticsearch-exporter
  namespace: elastic
spec:
  ports:
    - name: http
      port: 9114
      targetPort: 9114
      protocol: TCP
  selector:
    name: prometheus-elasticsearch-exporter
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-elasticsearch-exporter
  namespace: elastic
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`mon3.rudenspavasaris.id.lv`)
    kind: Rule
    services:
    - name: prometheus-elasticsearch-exporter
      port: 9114
      targetPort: 9114
  tls:
    certResolver: default
